--- a/index.html
+++ b/index.html
@@ -7,52 +7,115 @@
     <title>JOKES</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background: linear-gradient(120deg, #1c92d2, #f2fcfe);
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Arial', sans-serif;
+            color: #333;
+        }
+
+        .btn {
+            transition: all 0.3s ease-in-out;
+            font-size: 1.2rem;
+            padding: 0.8rem 2rem;
+            border-radius: 50px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+            background: #218838;
+            color: #fff;
+        }
+
+        .joke-container {
+            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+            border-radius: 15px;
+            padding: 2rem;
+            animation: slideIn 0.8s ease-in-out;
+            max-width: 600px;
+            margin: auto;
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .header-title {
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: #1c92d2;
+        }
+
+        .joke-setup {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #d9534f;
+        }
+
+        .joke-punchline {
+            font-size: 1.3rem;
+            font-weight: bold;
+            color: #5cb85c;
+            margin-top: 1rem;
+        }
+    </style>
 </head>
 
 <body>
-    <div class=" container-fluid bg-dark bg-gradient d-flex justify-content-center align-items-center"
-        style="height: 100vh;">
-        <div class="container text-center">
-            <h1 class="text-warning">Joke App</h1>
-            <button onclick="getRandomJoke()" class="my-5 btn btn-success border">Generate Joke</button>
-            <div id="result" class="my-5">
-                <div class="border rounded p-5">
-                    <h1 class="text-light">Joke of the Day</h1>
-                    <p class="fw-bolder text-danger fs-3"></p>
-                    <p class="fw-bolder text-success fs-4"></p>
-                </div>
-
+    <div class="container text-center">
+        <h1 class="header-title">Joke App</h1>
+        <button onclick="getRandomJoke()" class="my-5 btn btn-success border">Generate Joke</button>
+        <div id="result" class="my-5">
+            <div class="joke-container fade-in">
+                <h1>Joke of the Day</h1>
+                <p class="joke-setup">Press the button to see a joke!</p>
+                <p class="joke-punchline"></p>
             </div>
         </div>
     </div>
-</body>
-<script>
-    const getRandomJoke = () => {
-        fetch("https://official-joke-api.appspot.com/random_joke")
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('API Call Failed');
-                }
-                return response.json();
-            })
-            .then(data => {
-                console.log(data);
-                const displayJoke = data;
-                console.log(displayJoke);
-                const result = document.getElementById("result");
 
-                result.innerHTML = `
-                    <div class="border rounded p-5">
-                        <h1 class="text-light">Joke of the Day</h1>
-                        <p class="fw-bolder text-danger fs-3">${displayJoke.setup}</p>
-                        <p class="fw-bolder text-success fs-4">${displayJoke.punchline}</p>
-                    </div>
-                `;
-            })
-            .catch(error => {
-                console.log(error);
-            });
-    };
-</script>
+    <script>
+        const getRandomJoke = () => {
+            fetch("https://official-joke-api.appspot.com/random_joke")
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('API Call Failed');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    const displayJoke = data;
+                    const result = document.getElementById("result");
+
+                    result.innerHTML = `
+                        <div class="joke-container fade-in">
+                            <h1>Joke of the Day</h1>
+                            <p class="joke-setup">${displayJoke.setup}</p>
+                            <p class="joke-punchline">${displayJoke.punchline}</p>
+                        </div>
+                    `;
+                })
+                .catch(error => {
+                    console.error(error);
+                });
+        };
+    </script>
+</body>
 
 </html>
